...
                        "error", tint = MaterialTheme.colorScheme.error)
            }

        )

        Button(
            modifier = Modifier.testTag("guessbtn"),
            enabled = !isErrorState,
            onClick = {
                val myNum = myNumber.toInt()
                if (viewModel.generatedNum == myNum) {
                    resultText = "You Won"
                } else if (viewModel.generatedNum < myNum) {
...
